# cv_exercise

Blatt1/1/: first_program.cpp
Blatt1/2/: 2b.cpp  2c.cpp
Blatt1/3/: CMakeLists.txt  Cuboid.cpp  Cuboid.h  test_program.cpp
Blatt1/4/: test_program.cpp
Blatt2/1/: CMakeLists.txt  cvmat.cpp
Blatt2/1image/: CMakeLists.txt  cvload.cpp
Blatt2/1webcam/: DisplayImage.cpp
Blatt2/2/: CMakeLists.txt  DisplayImage.cpp
Blatt2/3/: DisplayImage.cpp
Blatt2/4/: DisplayImage.cpp
Blatt2/5/: DisplayImage.cpp
C++/CMake/: CMakeLists.txt  hello.cpp  hello2.cpp
C++/Classes/: CMakeLists.txt  Greeter.cpp  Greeter.h  hello.cpp
Evaluation/: iou_calc.py  negatives.txt  positives.txt  samples.vec  test
Evaluation/classifier/: cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
Evaluation/samples/: pos-0.pgm.vec  pos-1.pgm.vec  pos-10.pgm.vec  pos-100.pgm.vec  pos-101.pgm.vec  pos-102.pgm.vec  pos-103.pgm.vec  pos-104.pgm.vec  pos-105.pgm.vec  pos-106.pgm.vec  pos-107.pgm.vec  pos-108.pgm.vec  pos-109.pgm.vec  pos-11.pgm.vec  pos-110.pgm.vec  pos-111.pgm.vec  pos-112.pgm.vec  pos-113.pgm.vec  pos-114.pgm.vec  pos-115.pgm.vec  pos-116.pgm.vec  pos-117.pgm.vec  pos-118.pgm.vec  pos-119.pgm.vec  pos-12.pgm.vec  pos-120.pgm.vec  pos-121.pgm.vec  pos-122.pgm.vec  pos-123.pgm.vec  pos-124.pgm.vec  pos-125.pgm.vec  pos-126.pgm.vec  pos-127.pgm.vec  pos-128.pgm.vec  pos-129.pgm.vec  pos-13.pgm.vec  pos-130.pgm.vec  pos-131.pgm.vec  pos-132.pgm.vec  pos-133.pgm.vec  (+509 more)
OpenCV/gray/: DisplayImage.cpp
(+22 files in other folders)
